fixed layout bug with center constrained nodes

--- a/public/global.css
+++ b/public/global.css
@@ -22,12 +22,10 @@ body {
 	width: 100vw;
 	background-color: black;
 
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
-		'Helvetica Neue', sans-serif;
+	font-family: 'IBM Plex Sans', sans-serif;
+	font-weight: 500;
 	font-size: 20px;
-	/* position: relative; */
 	display: flex;
-	/* align-items: stretch; */
 	align-items: center;
 	justify-content: center;
 }
